# rembg-web

./: .editorconfig  Dockerfile  Makefile  README.md  app.py  pyproject.toml
templates/: index.html
